--- a/app/src/main/res/layout/developed_w_by.xml
+++ b/app/src/main/res/layout/developed_w_by.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/bottom_develop_by"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_alignParentBottom="true"
   android:layout_alignParentStart="true"
-  android:background="#00ffffff"
+  android:background="@color/transparent"
   android:gravity="center_vertical|center_horizontal"
   android:padding="5dp">
 
