Included the developed_w_by layout.

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -37,4 +37,10 @@
       android:layout_marginTop="18dp"
       android:visibility="visible" />
 
+    <include 
+        layout="@layout/developed_w_by"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
