--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -5,12 +5,27 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@drawable/md_main_bg"
+  android:paddingTop="3dp"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
-  tools:context="com.gyanendrokh.meiteimayek.keyboard.activities.MainActivity"
-  tools:showIn="@layout/app_bar_main">
-  
-  <include 
+  tools:context="com.gyanendrokh.meiteimayek.keyboard.activities.MainActivity">
+
+  <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_above="@+id/include_db">
+
+    <RelativeLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/main_content">
+
+
+    </RelativeLayout>
+
+  </ScrollView>
+
+  <include
+    android:id="@+id/include_db"
     layout="@layout/developed_w_by"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
