--- a/app/src/main/res/layout/developed_w_by.xml
+++ b/app/src/main/res/layout/developed_w_by.xml
@@ -5,8 +5,6 @@
   android:id="@+id/bottom_develop_by"
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
-  android:layout_alignParentBottom="true"
-  android:layout_alignParentStart="true"
   android:background="@color/transparent"
   android:gravity="center_vertical|center_horizontal"
   android:padding="5dp">
@@ -27,7 +25,8 @@
       android:layout_height="20dp"
       android:layout_alignParentTop="true"
       android:layout_toEndOf="@+id/developed_w_by_1"
-      app:srcCompat="@drawable/ic_favorite" />
+      app:srcCompat="@drawable/ic_favorite"
+      android:contentDescription="@string/love"/>
 
     <TextView
       android:id="@+id/developed_w_by_2"
