--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -6,29 +6,22 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingTop="3dp"
+  android:id="@+id/main_layout"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
   tools:context="com.gyanendrokh.meiteimayek.keyboard.activities.MainActivity">
 
   <ScrollView
+    android:id="@+id/main_scroll_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_above="@+id/include_db">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/main_content">
 
-
     </RelativeLayout>
 
   </ScrollView>
-
-  <include
-    android:id="@+id/include_db"
-    layout="@layout/developed_w_by"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
