Changed Screen from Activity to Fragements and added the 'about_me' layout.

--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,26 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:paddingTop="3dp"
-  android:id="@+id/main_layout"
+  android:id="@+id/main_view" 
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
-  tools:context="com.gyanendrokh.meiteimayek.keyboard.activities.MainActivity">
-
-  <ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/main_content">
-
-    </RelativeLayout>
-
-  </ScrollView>
-
-</RelativeLayout>
+  tools:context="com.gyanendrokh.meiteimayek.keyboard.activities.MainActivity" />
