--- a/app/src/main/res/layout/home_not_setup.xml
+++ b/app/src/main/res/layout/home_not_setup.xml
@@ -16,6 +16,7 @@
     android:layout_marginTop="15dp">
 
     <TextView
+      android:id="@+id/text1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
@@ -24,6 +25,19 @@
       android:textSize="15sp"
       android:textStyle="bold"
       android:textColor="#000000" />
+
+    <android.support.v7.widget.AppCompatButton
+      android:id="@+id/setUpKey"
+      android:layout_width="wrap_content"
+      android:layout_height="30dp"
+      android:layout_below="@+id/text1"
+      android:layout_centerHorizontal="true"
+      android:background="@drawable/about_dev_btn"
+      android:padding="5dp"
+      android:layout_marginTop="3dp"
+      android:text="@string/click_here_to_setup"
+      android:textSize="12sp"
+      style="@style/Widget.AppCompat.Button" />
 
   </RelativeLayout>
 
