--- a/app/src/main/res/layout/home_not_setup.xml
+++ b/app/src/main/res/layout/home_not_setup.xml
@@ -29,11 +29,13 @@
     <android.support.v7.widget.AppCompatButton
       android:id="@+id/setUpKey"
       android:layout_width="wrap_content"
-      android:layout_height="30dp"
+      android:layout_height="40dp"
       android:layout_below="@+id/text1"
       android:layout_centerHorizontal="true"
       android:background="@drawable/about_dev_btn"
       android:padding="5dp"
+      android:paddingEnd="10dp"
+      android:paddingStart="10dp"
       android:layout_marginTop="3dp"
       android:text="@string/click_here_to_setup"
       android:textSize="12sp"
