Added the OpenSourceFragment.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,6 +16,7 @@
   <item android:title="@string/sNav_about">
     <menu>
       <item
+        android:id="@+id/sNav_openSource"
         android:icon="@drawable/ic_developer_mode"
         android:title="@string/sNav_openSource"/>
       <item
