--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,8 @@
   android:paddingTop="3dp"
   android:id="@+id/main_layout"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
-  tools:context="com.gyanendrokh.meiteimayek.keyboard.activities.MainActivity">
+  tools:context="com.gyanendrokh.meiteimayek.keyboard.activities.MainActivity"
+  android:background="@drawable/md_main_bg">
 
   <ScrollView
     android:layout_width="match_parent"
