--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,6 +3,7 @@
 
   <group android:checkableBehavior="single">
     <item
+      android:id="@+id/sNav_home"
       android:icon="@drawable/ic_home"
       android:title="@string/sNav_home"/>
     <item
