--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,6 +20,45 @@
       android:layout_height="wrap_content"
       android:id="@+id/main_content">
 
+      <android.support.v7.widget.CardView
+        android:id="@+id/editTry"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/card_dimens"
+        app:cardCornerRadius="@dimen/card_dimens"
+        app:cardElevation="@dimen/card_dimens">
+
+        <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="@dimen/card_rel_margin">
+
+          <TextView
+            android:id="@+id/home_try_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/home_try_title"
+            android:textColor="@color/about_title"
+            android:textSize="15sp"/>
+
+          <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/home_try_title"
+            android:layout_marginTop="5dp">
+
+            <android.support.design.widget.TextInputEditText
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:inputType="text"
+              android:hint="Try Here..."/>
+
+          </android.support.design.widget.TextInputLayout>
+
+        </RelativeLayout>
+
+      </android.support.v7.widget.CardView>
+
     </RelativeLayout>
 
   </ScrollView>
