--- a/app/src/main/res/layout/fragment_about_me.xml
+++ b/app/src/main/res/layout/fragment_about_me.xml
@@ -10,10 +10,52 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+      android:id="@+id/aboutLogo"
+      android:layout_width="115dp"
+      android:layout_height="115dp"
+      android:layout_marginStart="15dp"
+      app:srcCompat="@mipmap/ic_launcher"/>
+
+    <TextView
+      android:id="@+id/aboutFullName"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      android:layout_marginStart="2dp"
+      android:layout_marginTop="17dp"
+      android:layout_toEndOf="@+id/aboutLogo"
+      android:text="@string/app_full_name"
+      android:textColor="#fff"
+      android:textSize="20sp"/>
+
+    <TextView
+      android:id="@+id/aboutDevBy"
+      android:layout_height="wrap_content"
+      android:layout_width="wrap_content"
+      android:text="@string/devBy"
+      android:layout_below="@+id/aboutFullName"
+      android:layout_alignStart="@+id/aboutFullName"
+      android:layout_marginTop="2dp"
+      android:textColor="#fff"
+      android:textSize="17sp" />
+
+    <TextView
+      android:id="@+id/aboutCopyright"
+      android:layout_height="wrap_content"
+      android:layout_width="wrap_content"
+      android:text="@string/copyright"
+      android:textColor="#fff"
+      android:textSize="14sp"
+      android:layout_below="@+id/aboutDevBy"
+      android:layout_alignStart="@+id/aboutDevBy"
+      android:layout_marginTop="2dp" />
+
     <android.support.v7.widget.CardView
       android:id="@+id/aboutCard"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_below="@id/aboutLogo"
       android:layout_margin="@dimen/card_dimens"
       app:cardCornerRadius="@dimen/card_dimens"
       app:cardElevation="@dimen/card_dimens">
