--- a/app/src/main/res/layout/fragment_about_me.xml
+++ b/app/src/main/res/layout/fragment_about_me.xml
@@ -163,6 +163,7 @@
 
           <android.support.v7.widget.AppCompatButton
             style="@style/Widget.AppCompat.Button"
+            android:id="@+id/dev_con_fb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/about_btn_margin"
@@ -171,6 +172,7 @@
 
           <android.support.v7.widget.AppCompatButton
             style="@style/Widget.AppCompat.Button"
+            android:id="@+id/dev_con_gmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/about_btn_margin"
@@ -179,6 +181,7 @@
 
           <android.support.v7.widget.AppCompatButton
             style="@style/Widget.AppCompat.Button"
+            android:id="@+id/dev_con_github"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/about_btn_margin"
