--- a/app/src/main/res/layout/fragment_open_source.xml
+++ b/app/src/main/res/layout/fragment_open_source.xml
@@ -34,7 +34,7 @@
 
         <android.support.v7.widget.AppCompatButton
           style="@style/Widget.AppCompat.Button"
-          android:id="@+id/os_github"
+          android:id="@+id/os_github_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="15dp"
